# robot-rumble-genetic-bot

./: .gitignore  Cargo.toml  first-names.json  last-names.json
frontend/: index.html
src/: expression.rs  family_tree.rs  logic_ext.rs  main.rs  robot_template.py  sockets.rs
