[package]
name = "genetic_robot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
logic = {path = "../robot-rumble/logic/logic"}
async-trait = "0.1.78"
tokio = { version = "1.37.0", features = ["macros", "fs", "sync", "tokio-macros", "rt-multi-thread"] }
futures = "0.3.30"
tokio-tungstenite = "0.21.0"
